--- a/index.html
+++ b/index.html
@@ -2052,7 +2052,7 @@ fetch(url, {
 </p>
 
 <p>GandengTangan partners with Privy to Know Your Customer (KYC). <br><b>THIS ENDPOINT IS STILL UNDER DEVELOPMENT.</b></p>
-<aside class="notice">This endpoint lets you request KYC of borrower.</aside>
+<aside class="notice">This endpoint lets you request KYC.</aside>
 
 <span id="example-requests-POSTborrower-request-kyc">
 <blockquote>Example request:</blockquote>
